--- a/01-docker-terraform/2_docker_sql/docker-compose.yaml
+++ b/01-docker-terraform/2_docker_sql/docker-compose.yaml
@@ -17,4 +17,7 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=root
     ports:
       - "8080:80"
-    
+networks:
+  network1:
+    name: pg-network
+    external: true
