--- a/01-docker-terraform/2_docker_sql/docker-compose.yaml
+++ b/01-docker-terraform/2_docker_sql/docker-compose.yaml
@@ -17,7 +17,9 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=root
     ports:
       - "8080:80"
-networks:
-  network1:
-    name: pg-network
-    external: true
+
+
+# docker-compose up -d
+# docker-compose down
+# docker ps
+# docker network ls
