fixed for external network so ingest containers can me re-run with start after compose down and up

--- a/01-docker-terraform/2_docker_sql/docker-compose.yaml
+++ b/01-docker-terraform/2_docker_sql/docker-compose.yaml
@@ -6,10 +6,11 @@ services:
       - POSTGRES_PASSWORD=root
       - POSTGRES_DB=ny_taxi
     volumes:
-      # - "./ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
-      - "d:/ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
+      - "./ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
     ports:
       - "5432:5432"
+    networks:
+      - pg-network
   pgadmin:
     image: dpage/pgadmin4
     environment:
@@ -17,8 +18,13 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=root
     ports:
       - "8080:80"
+    networks:
+      - pg-network
+networks:
+  pg-network:
+    external: true
 
-
+# docker network create pg-network
 # docker-compose up -d
 # docker-compose down
 # docker ps
