--- a/01-docker-terraform/2_docker_sql/docker-compose.yaml
+++ b/01-docker-terraform/2_docker_sql/docker-compose.yaml
@@ -6,7 +6,8 @@ services:
       - POSTGRES_PASSWORD=root
       - POSTGRES_DB=ny_taxi
     volumes:
-      - "./ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
+      - "d:/ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
+      # - "./ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
     ports:
       - "5432:5432"
     networks:
