--- a/01-docker-terraform/2_docker_sql/docker-compose.yaml
+++ b/01-docker-terraform/2_docker_sql/docker-compose.yaml
@@ -26,6 +26,7 @@ networks:
     external: true
 
 # docker network create pg-network
+# docker compose build
 # docker-compose up -d
 # docker-compose down
 # docker ps
