big query upload and half of homework

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 01-docker-terraform/2_docker_sql/ny_taxi_postgres_data/*
+02-workflow-orchestration/data-engineering-zoomcamp2024-homework.code-workspace
+03-data-warehouse/terraform-demo-412002-cbcccc3c0b05.json
+03-data-warehouse/data/*
