--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 02-workflow-orchestration/data-engineering-zoomcamp2024-homework.code-workspace
 03-data-warehouse/terraform-demo-412002-cbcccc3c0b05.json
 03-data-warehouse/data/*
+dlt_workshop/*.duckdb*
