initial commit from dbt

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 03-data-warehouse/terraform-demo-412002-cbcccc3c0b05.json
 03-data-warehouse/data/*
 dlt_workshop/*.duckdb*
+
+# Default .gitignore content added by dbt Cloud# you shouldn't commit these into source control
+# these are the default directory names, adjust/add to fit your needs
+target/
+dbt_packages/
+logs/
+# end dbt Cloud content
