--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,6 @@ dbt_packages/
 logs/
 # end dbt Cloud content
 05-batch/zones.parquet/*
-05-batch/*.csv
+05-batch/*.csv*
+05-batch/code/fhvhv/*
+05-batch/code/*.csv.*
